--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,6 +112,7 @@ jobs:
             `# The files that will be included.` \
             module.json                          \
             README.md                            \
+            CHANGELOG.md                         \
             LICENSE                              \
             templates                            \
             js/                                  \
