--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,8 @@ jobs:
             js/                                  \
             css/                                 \
             lang/                                \
-            img/
+            img/                                 \
+            packs/
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
 
