--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,3 @@
 {
-  "printWidth": 120,
-  "overrides": [
-    {
-      "files": "**/*.hbs",
-      "options": {
-        "parser": "angular"
-      }
-    }
-  ]
+  "printWidth": 120
 }
