--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -117,6 +117,7 @@ jobs:
             templates                            \
             js/                                  \
             css/                                 \
+            font/                                \
             lang/                                \
             img/                                 \
             packs/
